[package]
name = "brokkr"
version = "0.1.1"
authors = ["lirsacc <c.lirsac@gmail.com>"]
description = "Simple distributed task queue library for Rust."
homepage = "https://github.com/lirsacc/brokkr"
repository = "https://github.com/lirsacc/brokkr"
keywords = ["redis", "queue", "distributed"]
readme = "README.md"
license = "MIT"

include = [
  "README.md",
  "LICENSE",
  "Cargo.toml",
  "src/**/*",
  "examples/**/*"
]

[badges]
travis-ci = { repository = "lirsacc/brokkr", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
redis = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }


[dev-dependencies]
pretty_env_logger = "0.2"
job_scheduler = "1.0"
